--- a/.config
+++ b/.config
@@ -1742,7 +1742,7 @@ CONFIG_PACKAGE_procd=y
 # CONFIG_PACKAGE_procd-ujail-console is not set
 # CONFIG_PACKAGE_qos-scripts is not set
 # CONFIG_PACKAGE_refpolicy is not set
-CONFIG_PACKAGE_resolveip=y
+# CONFIG_PACKAGE_resolveip is not set
 CONFIG_PACKAGE_rpcd=y
 # CONFIG_PACKAGE_rpcd-mod-file is not set
 # CONFIG_PACKAGE_rpcd-mod-iwinfo is not set
@@ -2424,7 +2424,7 @@ CONFIG_PACKAGE_kmod-ipt-fullconenat=y
 # CONFIG_PACKAGE_kmod-ipt-ipmark is not set
 CONFIG_PACKAGE_kmod-ipt-ipopt=y
 # CONFIG_PACKAGE_kmod-ipt-ipp2p is not set
-CONFIG_PACKAGE_kmod-ipt-iprange=y
+# CONFIG_PACKAGE_kmod-ipt-iprange is not set
 # CONFIG_PACKAGE_kmod-ipt-ipsec is not set
 CONFIG_PACKAGE_kmod-ipt-ipset=y
 # CONFIG_PACKAGE_kmod-ipt-ipv4options is not set
@@ -2439,7 +2439,7 @@ CONFIG_PACKAGE_kmod-ipt-nat6=y
 # CONFIG_PACKAGE_kmod-ipt-nathelper-rtsp is not set
 # CONFIG_PACKAGE_kmod-ipt-nflog is not set
 # CONFIG_PACKAGE_kmod-ipt-nfqueue is not set
-CONFIG_PACKAGE_kmod-ipt-offload=y
+# CONFIG_PACKAGE_kmod-ipt-offload is not set
 # CONFIG_PACKAGE_kmod-ipt-physdev is not set
 # CONFIG_PACKAGE_kmod-ipt-proto is not set
 # CONFIG_PACKAGE_kmod-ipt-psd is not set
@@ -2456,9 +2456,9 @@ CONFIG_PACKAGE_kmod-ipt-tproxy=y
 # CONFIG_PACKAGE_kmod-ipt-ulog is not set
 # CONFIG_PACKAGE_kmod-netatop is not set
 CONFIG_PACKAGE_kmod-nf-conntrack=y
-CONFIG_PACKAGE_kmod-nf-conntrack-netlink=y
+# CONFIG_PACKAGE_kmod-nf-conntrack-netlink is not set
 CONFIG_PACKAGE_kmod-nf-conntrack6=y
-CONFIG_PACKAGE_kmod-nf-flow=y
+# CONFIG_PACKAGE_kmod-nf-flow is not set
 CONFIG_PACKAGE_kmod-nf-ipt=y
 CONFIG_PACKAGE_kmod-nf-ipt6=y
 # CONFIG_PACKAGE_kmod-nf-ipvs is not set
@@ -2480,7 +2480,7 @@ CONFIG_PACKAGE_kmod-nfnetlink=y
 # CONFIG_PACKAGE_kmod-nft-netdev is not set
 # CONFIG_PACKAGE_kmod-nft-offload is not set
 # CONFIG_PACKAGE_kmod-nft-queue is not set
-# CONFIG_PACKAGE_kmod-oaf is not set
+CONFIG_PACKAGE_kmod-oaf=y
 # end of Netfilter Extensions
 
 #
@@ -2633,7 +2633,7 @@ CONFIG_PACKAGE_kmod-pppox=y
 CONFIG_PACKAGE_kmod-sit=y
 CONFIG_PACKAGE_kmod-slhc=y
 # CONFIG_PACKAGE_kmod-slip is not set
-CONFIG_PACKAGE_kmod-tcp-bbr=y
+# CONFIG_PACKAGE_kmod-tcp-bbr is not set
 # CONFIG_PACKAGE_kmod-tcp-hybla is not set
 # CONFIG_PACKAGE_kmod-trelay is not set
 # CONFIG_PACKAGE_kmod-tun is not set
@@ -2904,7 +2904,140 @@ CONFIG_PACKAGE_kmod-mt76-core=y
 # CONFIG_PACKAGE_kmod-mt7603e is not set
 CONFIG_PACKAGE_kmod-mt7615-common=y
 CONFIG_PACKAGE_kmod-mt7615-firmware=y
-# CONFIG_PACKAGE_kmod-mt7615d is not set
+CONFIG_PACKAGE_kmod-mt7615d=y
+CONFIG_MTK_SUPPORT_OPENWRT=y
+CONFIG_MTK_WIFI_DRIVER=y
+CONFIG_MTK_FIRST_IF_MT7615E=y
+# CONFIG_MTK_FIRST_IF_MT7622 is not set
+# CONFIG_MTK_FIRST_IF_MT7626 is not set
+# CONFIG_MTK_FIRST_IF_NONE is not set
+# CONFIG_MTK_SECOND_IF_NONE is not set
+CONFIG_MTK_SECOND_IF_MT7615E=y
+CONFIG_MTK_THIRD_IF_NONE=y
+# CONFIG_MTK_THIRD_IF_MT7615E is not set
+CONFIG_MTK_RT_FIRST_CARD=7615
+CONFIG_MTK_RT_SECOND_CARD=7615
+CONFIG_MTK_RT_FIRST_IF_RF_OFFSET=0xc0000
+CONFIG_MTK_RT_SECOND_IF_RF_OFFSET=0xc8000
+CONFIG_MTK_MT_WIFI=y
+CONFIG_MTK_MT_WIFI_PATH="mt_wifi"
+
+#
+# WiFi Generic Feature Options
+#
+CONFIG_MTK_FIRST_IF_EEPROM_FLASH=y
+# CONFIG_MTK_FIRST_IF_EEPROM_PROM is not set
+# CONFIG_MTK_FIRST_IF_EEPROM_EFUSE is not set
+CONFIG_MTK_RT_FIRST_CARD_EEPROM="flash"
+CONFIG_MTK_SECOND_IF_EEPROM_FLASH=y
+# CONFIG_MTK_SECOND_IF_EEPROM_PROM is not set
+# CONFIG_MTK_SECOND_IF_EEPROM_EFUSE is not set
+CONFIG_MTK_RT_SECOND_CARD_EEPROM="flash"
+CONFIG_MTK_MULTI_INF_SUPPORT=y
+CONFIG_MTK_WIFI_BASIC_FUNC=y
+CONFIG_MTK_DOT11_N_SUPPORT=y
+CONFIG_MTK_DOT11_VHT_AC=y
+CONFIG_MTK_G_BAND_256QAM_SUPPORT=y
+CONFIG_MTK_TPC_SUPPORT=y
+CONFIG_MTK_ICAP_SUPPORT=y
+CONFIG_MTK_SPECTRUM_SUPPORT=y
+CONFIG_MTK_BACKGROUND_SCAN_SUPPORT=y
+CONFIG_MTK_SMART_CARRIER_SENSE_SUPPORT=y
+CONFIG_MTK_MT_DFS_SUPPORT=y
+# CONFIG_MTK_OFFCHANNEL_SCAN_FEATURE is not set
+# CONFIG_MTK_DPP_SUPPORT is not set
+CONFIG_MTK_HDR_TRANS_TX_SUPPORT=y
+CONFIG_MTK_HDR_TRANS_RX_SUPPORT=y
+# CONFIG_MTK_DBDC_MODE is not set
+CONFIG_MTK_WSC_INCLUDED=y
+CONFIG_MTK_WSC_V2_SUPPORT=y
+CONFIG_MTK_DOT11W_PMF_SUPPORT=y
+CONFIG_MTK_TXBF_SUPPORT=y
+# CONFIG_MTK_FAST_NAT_SUPPORT is not set
+# CONFIG_MTK_FTM_SUPPORT is not set
+# CONFIG_MTK_MBO_SUPPORT is not set
+CONFIG_MTK_IGMP_SNOOP_SUPPORT=y
+CONFIG_MTK_RTMP_FLASH_SUPPORT=y
+CONFIG_MTK_PRE_CAL_TRX_SET1_SUPPORT=y
+CONFIG_MTK_RLM_CAL_CACHE_SUPPORT=y
+CONFIG_MTK_PRE_CAL_TRX_SET2_SUPPORT=y
+# CONFIG_MTK_RF_LOCKDOWN_SUPPORT is not set
+# CONFIG_MTK_LINK_TEST_SUPPORT is not set
+CONFIG_MTK_ATE_SUPPORT=y
+# CONFIG_MTK_PASSPOINT_R2 is not set
+CONFIG_MTK_UAPSD=y
+CONFIG_MTK_TCP_RACK_SUPPORT=y
+CONFIG_MTK_RED_SUPPORT=y
+# CONFIG_MTK_FDB_SUPPORT is not set
+CONFIG_MTK_FIRST_IF_IPAILNA=y
+# CONFIG_MTK_FIRST_IF_IPAELNA is not set
+# CONFIG_MTK_FIRST_IF_EPAELNA is not set
+CONFIG_MTK_SECOND_IF_IPAILNA=y
+# CONFIG_MTK_SECOND_IF_IPAELNA is not set
+# CONFIG_MTK_SECOND_IF_EPAELNA is not set
+# CONFIG_MTK_RLT_MAC is not set
+# CONFIG_MTK_RTMP_MAC is not set
+# end of WiFi Generic Feature Options
+
+#
+# WiFi Operation Modes
+#
+CONFIG_MTK_WIFI_MODE_AP=y
+# CONFIG_MTK_WIFI_MODE_STA is not set
+# CONFIG_MTK_WIFI_MODE_BOTH is not set
+CONFIG_MTK_MT_AP_SUPPORT=y
+CONFIG_MTK_WDS_SUPPORT=y
+CONFIG_MTK_WIFI_EAP_FEATURE=y
+# CONFIG_MTK_MLME_MULTI_QUEUE_SUPPORT is not set
+CONFIG_MTK_MBSS_SUPPORT=y
+CONFIG_MTK_APCLI_SUPPORT=y
+# CONFIG_MTK_APCLI_CERT_SUPPORT is not set
+CONFIG_MTK_MAC_REPEATER_SUPPORT=y
+# CONFIG_MTK_MWDS is not set
+CONFIG_MTK_MUMIMO_SUPPORT=y
+CONFIG_MTK_MU_RA_SUPPORT=y
+CONFIG_MTK_DOT11R_FT_SUPPORT=y
+CONFIG_MTK_DOT11K_RRM_SUPPORT=y
+CONFIG_MTK_INTERWORKING=y
+# CONFIG_MTK_MAP_SUPPORT is not set
+CONFIG_MTK_OCE_SUPPORT=y
+# CONFIG_MTK_ENTERPRISE_AP_SUPPORT is not set
+# CONFIG_MTK_CFG80211_SUPPORT is not set
+# CONFIG_MTK_MBSS_AS_WDS_AP_SUPPORT is not set
+# CONFIG_MTK_DSCP_QOS_MAP_SUPPORT is not set
+# CONFIG_MTK_DSCP_PRI_SUPPORT is not set
+# CONFIG_MTK_MIN_PHY_RATE_SUPPORT is not set
+# CONFIG_MTK_FAST_UP_RATE_SUPPORT is not set
+# CONFIG_MTK_CON_WPS_SUPPORT is not set
+CONFIG_MTK_MCAST_RATE_SPECIFIC=y
+CONFIG_MTK_VOW_SUPPORT=y
+CONFIG_MTK_FQ_SCH_SUPPORT=y
+CONFIG_MTK_BAND_STEERING=y
+# CONFIG_MTK_LED_CONTROL_SUPPORT is not set
+# CONFIG_MTK_WLAN_HOOK is not set
+# CONFIG_MTK_RADIUS_ACCOUNTING_SUPPORT is not set
+CONFIG_MTK_GREENAP_SUPPORT=y
+CONFIG_MTK_PCIE_ASPM_DYM_CTRL_SUPPORT=y
+# CONFIG_MTK_COEX_SUPPORT is not set
+# CONFIG_MTK_EASY_SETUP_SUPPORT is not set
+# CONFIG_MTK_EVENT_NOTIFIER_SUPPORT is not set
+# CONFIG_MTK_AIR_MONITOR is not set
+CONFIG_MTK_WNM_SUPPORT=y
+CONFIG_MTK_WIFI_MSI_SUPPORT=y
+CONFIG_MTK_WPA3_SUPPORT=y
+CONFIG_MTK_OWE_SUPPORT=y
+# CONFIG_MTK_VENDOR_FEATURE10_SUPPORT is not set
+# CONFIG_MTK_VENDOR_FEATURE11_SUPPORT is not set
+# CONFIG_MTK_RCSA_SUPPORT is not set
+# end of WiFi Operation Modes
+
+CONFIG_MTK_WIFI_MT_MAC=y
+# CONFIG_MTK_CHIP_MT7603E is not set
+CONFIG_MTK_CHIP_MT7615E=y
+# CONFIG_MTK_CHIP_MT7622 is not set
+# CONFIG_MTK_CHIP_MT7663E is not set
+# CONFIG_MTK_CHIP_MT7626 is not set
+CONFIG_MTK_MT_MAC=y
 CONFIG_PACKAGE_kmod-mt7615e=y
 # CONFIG_PACKAGE_kmod-mt7663-firmware-ap is not set
 # CONFIG_PACKAGE_kmod-mt7663-firmware-sta is not set
@@ -4619,7 +4752,7 @@ CONFIG_LUCI_LANG_zh-cn=y
 # CONFIG_LUCI_LANG_zh-tw is not set
 # end of Translations
 
-CONFIG_PACKAGE_luci-compat=y
+# CONFIG_PACKAGE_luci-compat is not set
 CONFIG_PACKAGE_luci-mod-admin-full=y
 # CONFIG_PACKAGE_luci-mod-failsafe is not set
 # CONFIG_PACKAGE_luci-mod-rpc is not set
@@ -4637,9 +4770,9 @@ CONFIG_PACKAGE_luci-app-accesscontrol=y
 # CONFIG_PACKAGE_luci-app-ahcp is not set
 # CONFIG_PACKAGE_luci-app-airplay2 is not set
 # CONFIG_PACKAGE_luci-app-airwhu is not set
-# CONFIG_PACKAGE_luci-app-aliddns is not set
+CONFIG_PACKAGE_luci-app-aliddns=y
 # CONFIG_PACKAGE_luci-app-amule is not set
-# CONFIG_PACKAGE_luci-app-appfilter is not set
+CONFIG_PACKAGE_luci-app-appfilter=y
 # CONFIG_PACKAGE_luci-app-argon-config is not set
 # CONFIG_PACKAGE_luci-app-aria2 is not set
 # CONFIG_PACKAGE_luci-app-arpbind is not set
@@ -4702,7 +4835,7 @@ CONFIG_PACKAGE_luci-app-firewall=y
 # CONFIG_PACKAGE_luci-app-minidlna is not set
 # CONFIG_PACKAGE_luci-app-minieap is not set
 # CONFIG_PACKAGE_luci-app-mjpg-streamer is not set
-# CONFIG_PACKAGE_luci-app-mtwifi is not set
+CONFIG_PACKAGE_luci-app-mtwifi=y
 # CONFIG_PACKAGE_luci-app-music-remote-center is not set
 # CONFIG_PACKAGE_luci-app-mwan3 is not set
 # CONFIG_PACKAGE_luci-app-mwan3helper is not set
@@ -4715,7 +4848,7 @@ CONFIG_PACKAGE_luci-app-firewall=y
 # CONFIG_PACKAGE_luci-app-nginx-pingos is not set
 # CONFIG_PACKAGE_luci-app-ngrokc is not set
 # CONFIG_PACKAGE_luci-app-njitclient is not set
-CONFIG_PACKAGE_luci-app-nlbwmon=y
+# CONFIG_PACKAGE_luci-app-nlbwmon is not set
 # CONFIG_PACKAGE_luci-app-nps is not set
 # CONFIG_PACKAGE_luci-app-ntpc is not set
 # CONFIG_PACKAGE_luci-app-ocserv is not set
@@ -4733,12 +4866,12 @@ CONFIG_PACKAGE_iptables-mod-extra=y
 # CONFIG_PACKAGE_luci-app-oscam is not set
 # CONFIG_PACKAGE_luci-app-p910nd is not set
 # CONFIG_PACKAGE_luci-app-pagekitec is not set
-CONFIG_PACKAGE_luci-app-passwall=y
+# CONFIG_PACKAGE_luci-app-passwall is not set
 
 #
 # Configuration
 #
-CONFIG_PACKAGE_luci-app-passwall_Iptables_Transparent_Proxy=y
+# CONFIG_PACKAGE_luci-app-passwall_Iptables_Transparent_Proxy is not set
 # CONFIG_PACKAGE_luci-app-passwall_Nftables_Transparent_Proxy is not set
 # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Brook is not set
 # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ChinaDNS_NG is not set
@@ -4828,8 +4961,8 @@ CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Trojan=y
 # CONFIG_PACKAGE_luci-app-travelmate is not set
 # CONFIG_PACKAGE_luci-app-trojan-server is not set
 CONFIG_PACKAGE_luci-app-ttyd=y
-CONFIG_PACKAGE_luci-app-turboacc=y
-CONFIG_PACKAGE_TURBOACC_INCLUDE_OFFLOADING=y
+# CONFIG_PACKAGE_luci-app-turboacc is not set
+# CONFIG_PACKAGE_TURBOACC_INCLUDE_OFFLOADING is not set
 # CONFIG_PACKAGE_TURBOACC_INCLUDE_SHORTCUT_FE is not set
 CONFIG_PACKAGE_TURBOACC_INCLUDE_BBR_CCA=y
 # CONFIG_PACKAGE_TURBOACC_INCLUDE_DNSFORWARDER is not set
@@ -4866,7 +4999,7 @@ CONFIG_PACKAGE_luci-app-vssr_INCLUDE_Xray=y
 # CONFIG_PACKAGE_luci-app-wifischedule is not set
 CONFIG_PACKAGE_luci-app-wireguard=y
 # CONFIG_PACKAGE_luci-app-wol is not set
-CONFIG_PACKAGE_luci-app-wrtbwmon=y
+# CONFIG_PACKAGE_luci-app-wrtbwmon is not set
 # CONFIG_PACKAGE_luci-app-xlnetacc is not set
 # CONFIG_PACKAGE_luci-app-zerotier is not set
 # end of 3. Applications
@@ -4892,8 +5025,8 @@ CONFIG_PACKAGE_luci-theme-darkmatter=y
 # CONFIG_PACKAGE_luci-theme-neobird is not set
 # CONFIG_PACKAGE_luci-theme-netgear is not set
 # CONFIG_PACKAGE_luci-theme-netgearv2 is not set
-CONFIG_PACKAGE_luci-theme-opentomato=y
-# CONFIG_PACKAGE_luci-theme-opentomcat is not set
+# CONFIG_PACKAGE_luci-theme-opentomato is not set
+CONFIG_PACKAGE_luci-theme-opentomcat=y
 # CONFIG_PACKAGE_luci-theme-rosy is not set
 # end of 4. Themes
 
@@ -4940,6 +5073,8 @@ CONFIG_PACKAGE_luci-lib-nixio_openssl=y
 CONFIG_PACKAGE_default-settings=y
 CONFIG_PACKAGE_default-settings-chn=y
 CONFIG_PACKAGE_luci-i18n-accesscontrol-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-aliddns-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-appfilter-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-autoreboot-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-base-ca is not set
 # CONFIG_PACKAGE_luci-i18n-base-cs is not set
@@ -4994,10 +5129,6 @@ CONFIG_PACKAGE_luci-i18n-filetransfer-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-firewall-vi is not set
 CONFIG_PACKAGE_luci-i18n-firewall-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-firewall-zh-tw is not set
-# CONFIG_PACKAGE_luci-i18n-nlbwmon-ja is not set
-# CONFIG_PACKAGE_luci-i18n-nlbwmon-ru is not set
-CONFIG_PACKAGE_luci-i18n-nlbwmon-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-passwall-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-ramfree-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-samba-ca is not set
 # CONFIG_PACKAGE_luci-i18n-samba-cs is not set
@@ -5026,7 +5157,6 @@ CONFIG_PACKAGE_luci-i18n-samba-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-samba-zh-tw is not set
 CONFIG_PACKAGE_luci-i18n-smartdns-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-ttyd-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-turboacc-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-upnp-ca is not set
 # CONFIG_PACKAGE_luci-i18n-upnp-cs is not set
 # CONFIG_PACKAGE_luci-i18n-upnp-de is not set
@@ -5059,7 +5189,6 @@ CONFIG_PACKAGE_luci-i18n-vssr-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-wireguard-ru is not set
 # CONFIG_PACKAGE_luci-i18n-wireguard-sv is not set
 CONFIG_PACKAGE_luci-i18n-wireguard-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-wrtbwmon-zh-cn=y
 # end of LuCI
 
 #
@@ -5286,7 +5415,7 @@ CONFIG_PACKAGE_iptables-mod-fullconenat=y
 # CONFIG_PACKAGE_iptables-mod-ipmark is not set
 CONFIG_PACKAGE_iptables-mod-ipopt=y
 # CONFIG_PACKAGE_iptables-mod-ipp2p is not set
-CONFIG_PACKAGE_iptables-mod-iprange=y
+# CONFIG_PACKAGE_iptables-mod-iprange is not set
 # CONFIG_PACKAGE_iptables-mod-ipsec is not set
 # CONFIG_PACKAGE_iptables-mod-ipv4options is not set
 # CONFIG_PACKAGE_iptables-mod-led is not set
@@ -5376,8 +5505,8 @@ CONFIG_PACKAGE_miniupnpd=y
 # CONFIG_PACKAGE_dhcp-forwarder is not set
 # CONFIG_PACKAGE_dns-forwarder is not set
 # CONFIG_PACKAGE_dns-over-https is not set
-CONFIG_PACKAGE_dns2socks=y
-CONFIG_PACKAGE_dns2tcp=y
+# CONFIG_PACKAGE_dns2socks is not set
+# CONFIG_PACKAGE_dns2tcp is not set
 # CONFIG_PACKAGE_dnscrypt-proxy is not set
 # CONFIG_PACKAGE_dnscrypt-proxy-resolvers is not set
 # CONFIG_PACKAGE_dnslookup is not set
@@ -5811,7 +5940,7 @@ CONFIG_PACKAGE_wireguard-tools=y
 CONFIG_PACKAGE_kcptun-client=y
 # CONFIG_PACKAGE_kcptun-server is not set
 # CONFIG_PACKAGE_lighttpd is not set
-CONFIG_PACKAGE_microsocks=y
+# CONFIG_PACKAGE_microsocks is not set
 # CONFIG_PACKAGE_naiveproxy is not set
 # CONFIG_PACKAGE_nginx-all-module is not set
 # CONFIG_PACKAGE_nginx-mod-luci is not set
@@ -5851,7 +5980,7 @@ CONFIG_PACKAGE_shadowsocksr-libev-ssr-server=y
 # CONFIG_PACKAGE_tinyproxy is not set
 CONFIG_PACKAGE_trojan=y
 # CONFIG_PACKAGE_trojan-go is not set
-CONFIG_PACKAGE_trojan-plus=y
+# CONFIG_PACKAGE_trojan-plus is not set
 CONFIG_PACKAGE_uhttpd=y
 # CONFIG_PACKAGE_uhttpd-mod-lua is not set
 CONFIG_PACKAGE_uhttpd-mod-ubus=y
@@ -5868,7 +5997,17 @@ CONFIG_PACKAGE_uhttpd-mod-ubus=y
 # CONFIG_PACKAGE_airmon-ng is not set
 # CONFIG_PACKAGE_dynapoint is not set
 # CONFIG_PACKAGE_horst is not set
-# CONFIG_PACKAGE_mt_wifi is not set
+CONFIG_PACKAGE_mt_wifi=y
+
+#
+# MT_WIFI Configuration
+#
+# CONFIG_MTK_CHIP_MT7603E_MT7612E is not set
+# CONFIG_MTK_CHIP_MT7603E_MT7615E is not set
+# CONFIG_MTK_CHIP_MT7615E_DBDC is not set
+# CONFIG_MTK_CHIP_MT7915E_DBDC is not set
+# end of MT_WIFI Configuration
+
 # CONFIG_PACKAGE_pixiewps is not set
 # CONFIG_PACKAGE_reaver is not set
 # CONFIG_PACKAGE_wavemon is not set
@@ -5949,7 +6088,7 @@ CONFIG_PACKAGE_6in4=y
 # CONFIG_PACKAGE_apcupsd is not set
 # CONFIG_PACKAGE_apcupsd-cgi is not set
 # CONFIG_PACKAGE_apinger is not set
-# CONFIG_PACKAGE_appfilter is not set
+CONFIG_PACKAGE_appfilter=y
 # CONFIG_PACKAGE_atlas-probe is not set
 # CONFIG_PACKAGE_atlas-sw-probe is not set
 # CONFIG_PACKAGE_atlas-sw-probe-rpc is not set
@@ -6081,7 +6220,7 @@ CONFIG_PACKAGE_mtkhqos_util=y
 # CONFIG_PACKAGE_netstinky is not set
 # CONFIG_PACKAGE_nextdns is not set
 # CONFIG_PACKAGE_nfdump is not set
-CONFIG_PACKAGE_nlbwmon=y
+# CONFIG_PACKAGE_nlbwmon is not set
 # CONFIG_PACKAGE_noping is not set
 # CONFIG_PACKAGE_nut is not set
 CONFIG_PACKAGE_odhcp6c=y
@@ -6169,7 +6308,7 @@ CONFIG_PACKAGE_smartdns=y
 # CONFIG_PACKAGE_tayga is not set
 # CONFIG_PACKAGE_tcpdump is not set
 # CONFIG_PACKAGE_tcpdump-mini is not set
-CONFIG_PACKAGE_tcping=y
+# CONFIG_PACKAGE_tcping is not set
 # CONFIG_PACKAGE_tcping-simple is not set
 # CONFIG_PACKAGE_tcpping is not set
 # CONFIG_PACKAGE_tgt is not set
@@ -6281,7 +6420,7 @@ CONFIG_PACKAGE_uboot-envtools=y
 # CONFIG_PACKAGE_lz4 is not set
 # CONFIG_PACKAGE_pigz is not set
 # CONFIG_PACKAGE_unrar is not set
-CONFIG_PACKAGE_unzip=y
+# CONFIG_PACKAGE_unzip is not set
 # CONFIG_PACKAGE_xz-utils is not set
 # CONFIG_PACKAGE_zipcmp is not set
 # CONFIG_PACKAGE_zipmerge is not set
@@ -6667,7 +6806,7 @@ CONFIG_PACKAGE_coreutils-base64=y
 # CONFIG_PACKAGE_coreutils-mv is not set
 # CONFIG_PACKAGE_coreutils-nice is not set
 # CONFIG_PACKAGE_coreutils-nl is not set
-CONFIG_PACKAGE_coreutils-nohup=y
+# CONFIG_PACKAGE_coreutils-nohup is not set
 # CONFIG_PACKAGE_coreutils-nproc is not set
 # CONFIG_PACKAGE_coreutils-numfmt is not set
 # CONFIG_PACKAGE_coreutils-od is not set
@@ -6856,7 +6995,7 @@ CONFIG_PACKAGE_libjson-script=y
 # CONFIG_PACKAGE_openobex-apps is not set
 # CONFIG_PACKAGE_openocd is not set
 # CONFIG_PACKAGE_opensc-utils is not set
-# CONFIG_PACKAGE_openssl-util is not set
+CONFIG_PACKAGE_openssl-util=y
 # CONFIG_PACKAGE_openzwave is not set
 # CONFIG_PACKAGE_openzwave-config is not set
 # CONFIG_PACKAGE_owipcalc is not set
